--- a/walk to circle/Info.plist
+++ b/walk to circle/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationUsageDescription</key>
+	<string>Your location is used to determine when you reach the circle.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Your location is used to determine when you reach the circle.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
