Change bundle display name for WatchKit app

--- a/WalkToCircle WatchKit Extension/Info.plist
+++ b/WalkToCircle WatchKit Extension/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>WalkToCircle WatchKit Extension</string>
+	<string>Walk to Circle WatchKit Extension</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
